add basic backend setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Fullstack MERN app, Create and manage your contacts",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "server": "nodemon server.js"
     },
     "repository": {
         "type": "git",
@@ -15,5 +17,17 @@
     "bugs": {
         "url": "https://github.com/sandra-td/contact-keeper/issues"
     },
-    "homepage": "https://github.com/sandra-td/contact-keeper#readme"
+    "homepage": "https://github.com/sandra-td/contact-keeper#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "config": "^3.3.1",
+        "express": "^4.17.1",
+        "express-validator": "^6.4.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.12"
+    },
+    "devDependencies": {
+        "concurrently": "^5.2.0",
+        "nodemon": "^2.0.3"
+    }
 }
