--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules/
 
+client/build
+
+client/debug.log
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+*.log
+npm-debug.log*
+
 config/default.json
